--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "2.1.4",
     "description": "Lightweight React calendar with time options for booking",
     "main": "build/index.js",
+    "type": "module",
     "module": "build/index.es.js",
     "author": {
         "name": "Jacob Sidford",
@@ -22,7 +23,8 @@
         "calendar"
     ],
     "dependencies": {
-        "date-fns": "^1.30.1"
+        "date-fns": "^1.30.1",
+        "sass": "^1.66.1"
     },
     "scripts": {
         "build": "rollup -c",
@@ -42,7 +44,6 @@
         "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/react": "^16.9.49",
-        "node-sass": "^6.0.1",
         "react": "^16.8.3",
         "react-dom": "^16.8.3",
         "rollup": "^2.26.11",
